tests/fixtures/errors/expected_brace.cpp
// Test: missing closing brace
int main() {
    int x = 5;
    return 0;
